--- a/css/styles.css
+++ b/css/styles.css
@@ -106,16 +106,6 @@ p {
   color: var(--accent-color);
 }
 
-/* .navigation-list-item-link:hover::after {
-  content: "";
-  display: block;
-  width: 100%;
-  height: 4px;
-  background-color: var(--accent-color);
-  border-radius: 2px;
-  margin-top: 28px;
-} */
-
 .navigation-list-item-link::after {
   content: "";
   display: block;
@@ -144,6 +134,7 @@ p {
   letter-spacing: 0.02em;
   color: var(--main-text-color);
   padding-top: 32px;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .logo-accent,
@@ -158,6 +149,7 @@ p {
   line-height: 1.14;
   letter-spacing: 0.02em;
   color: var(--secondary-text-color);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .communication-list-item-link:not(:last-child) {
@@ -176,9 +168,11 @@ p {
   height: 11px;
   fill: var(--secondary-text-color);
   margin-right: 10px;
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.communication-list-item-link:hover .mail-icon {
+.communication-list-item-link:hover .mail-icon,
+.communication-list-item-link:focus .mail-icon {
   fill: var(--accent-color);
 }
 
@@ -187,9 +181,11 @@ p {
   height: 15px;
   fill: var(--secondary-text-color);
   margin-right: 10px;
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.communication-list-item-link:hover .smartphone-icon {
+.communication-list-item-link:hover .smartphone-icon,
+.communication-list-item-link:focus .smartphone-icon {
   fill: var(--accent-color);
 }
 
@@ -431,6 +427,8 @@ p {
   height: 44px;
   border-radius: 50%;
   padding: 12px;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .social-icons {
@@ -482,6 +480,7 @@ p {
   height: 90px;
   border: 1px solid #afb1b8;
   border-radius: 4px;
+  transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .regular-customers-list-item-link:hover,
@@ -491,40 +490,11 @@ p {
 
 .customers-icon {
   fill: #afb1b8;
-}
-
-.customer1-icon {
-  width: 44px;
-  height: 49px;
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .regular-customers-list-item-link:hover .customers-icon {
   fill: var(--accent-color);
-}
-
-.customer2-icon {
-  width: 40px;
-  height: 52px;
-}
-
-.customer3-icon {
-  width: 41px;
-  height: 43px;
-}
-
-.customer4-icon {
-  width: 80px;
-  height: 42px;
-}
-
-.customer5-icon {
-  width: 59px;
-  height: 47px;
-}
-
-.customer6-icon {
-  width: 88px;
-  height: 45px;
 }
 
 /* Подвал */
@@ -575,6 +545,7 @@ p {
   font-size: 14px;
   line-height: 1.71;
   color: rgba(255, 255, 255, 0.6);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .footer-appeal-text {
@@ -611,6 +582,7 @@ p {
   background-position: center;
   background-color: rgba(255, 255, 255, 0.1);
   border-radius: 50%;
+  transition: background 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .footer-social-item-link:hover,
@@ -700,6 +672,7 @@ p {
   padding: 6px 22px;
   border-radius: 4px;
   cursor: pointer;
+  transition: background 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .filter-btn:hover,
@@ -724,6 +697,7 @@ p {
   margin-right: 8px;
 }
 
+/* Проекты */
 .projects-list {
   display: flex;
   width: 1200px;
@@ -775,12 +749,33 @@ p {
 }
 
 .project-description {
+  position: absolute;
+  top: 0;
+  left: 0;
+  display: flex;
+  align-items: center;
+  padding-left: 24px;
+  padding-right: 24px;
+  height: 100%;
   font-weight: 400;
   font-size: 18px;
   line-height: 1.56;
   letter-spacing: 0.03em;
   color: #ffffff;
   background: rgba(33, 150, 243, 0.9);
+  transform: translateY(100%);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.overlay {
+  position: relative;
+  overflow: hidden;
+}
+
+.projects-list-item-link:hover .project-description,
+.projects-list-item-link:focus .project-description {
+  opacity: 1;
+  transform: translateY(0);
 }
 
 .projects-list-item-link {
